# nonos-mk

./: Cargo.toml  capsule.mk
.github/workflows/: ci.yml
src/: args.rs  encoder.rs  error.rs  main.rs
src/commands/: dispatch.rs  encode.rs  inspect.rs  keygen.rs  load_key.rs  mod.rs  read_blob.rs  serial_guard.rs  sign.rs  sign_release.rs  verify.rs
src/json/: decode_entry.rs  decode_enums.rs  decode_index.rs  decode_release.rs  encode_entry.rs  encode_index.rs  encode_price.rs  encode_release.rs  encode_token.rs  encode_validation.rs  hex_helpers.rs  mod.rs  read.rs  schema.rs
src/keys/: mod.rs  operator.rs  parse.rs  verify.rs
tests/: wire_layout.rs
tests/fixtures/: key.rs  mod.rs  preview.rs  simple.rs
