[package]
name = "nonos-mk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marketplace-index"
path = "src/main.rs"

[[test]]
name = "wire_layout"
path = "tests/wire_layout.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake3 = "1"
nonos_marketplace_abi = { path = "../userland/marketplace_abi", features = ["canonical-encode"] }
